Top-align adjacent columns

--- a/static/site.less
+++ b/static/site.less
@@ -76,6 +76,9 @@ a {
 // nested pdf-objects
 .object {
   padding-left: 5px;
+  & > div { // key-val pair
+    vertical-align: top;
+  }
 }
 .array {
   &:before {
