--- a/static/site.css
+++ b/static/site.css
@@ -11,6 +11,7 @@ a{cursor:pointer;text-decoration:underline}
 .breadcrumb.selected{background-color:#CCC}
 .page{display:inline-block;border:1px solid #00f;margin:0 5px 5px 0;padding:2px;vertical-align:top}
 .object{padding-left:5px}
+.object>div{vertical-align:top}
 .array:before{content:'['}
 .array:after{content:']'}
 .number,.reference,.string{display:inline-block;margin:.2ex .1em;padding:.3ex .2em .1ex .2em}
