--- a/static/site.css
+++ b/static/site.css
@@ -7,14 +7,14 @@ body{background-color:#FDFDFD}
 nav{top:0;left:0;right:0;background-color:#DDD;border-bottom:1px solid #BBB;padding:5px;box-sizing:border-box}
 h1,h2,h3,h4,h5,h6{margin:1ex 0}
 a{cursor:pointer;text-decoration:underline}
-.breadcrumb{display:inline-block;padding:2px 5px;margin:2px 5px;border:1px solid #AAA}
-.breadcrumb.selected{background-color:#CCC}
-.page{display:inline-block;border:1px solid #00f;margin:0 5px 5px 0;padding:2px;vertical-align:top}
+.breadcrumbs>span.selected a{background-color:#CCC}
+.breadcrumbs>span:after{content:"→"}
+.breadcrumbs>span:last-child:after{content:""}
+.page{display:inline-block;border:1px solid #B86;margin:0 5px 5px 0;padding:2px;vertical-align:top}
+.array,.name,.number,.object,.reference,.string{vertical-align:top}
 .object{padding-left:5px}
-.object>div{vertical-align:top}
-.array:before{content:'['}
-.array:after{content:']'}
-.number,.reference,.string{display:inline-block;margin:.2ex .1em;padding:.3ex .2em .1ex .2em}
+.name,.number,.reference,.string{display:inline-block;margin:.2ex .1em;padding:.3ex .2em .1ex .2em}
+.name{font-weight:700}
 .reference{border:1px solid #88F}
-.number{border:1px solid #DDD}
+.number{border:1px solid #E81}
 .string{font-family:monospace;white-space:pre-wrap}
