--- a/static/site.less
+++ b/static/site.less
@@ -101,3 +101,16 @@ div, section, nav, main, textarea, input, span {
   white-space: pre-wrap;
   word-break: break-all;
 }
+
+.page-canvas {
+  border: 2px solid rgba(100, 50, 200, 0.9);
+  position: relative;
+  section {
+    // border: 2px solid rgba(100, 50, 200, 0.9);
+  }
+  div {
+    border: 1px solid rgba(200, 100, 100, 0.5);
+    position: absolute;
+    white-space: pre;
+  }
+}
