--- a/static/site.css
+++ b/static/site.css
@@ -7,6 +7,8 @@ body{background-color:#FDFDFD}
 nav{top:0;left:0;right:0;z-index:1000;background-color:#DDD;border-bottom:1px solid #BBB;padding:5px;box-sizing:border-box}
 h1,h2,h3,h4,h5,h6{margin:1ex 0}
 a{cursor:pointer;text-decoration:underline}
+.thumbnails{position:fixed;top:29px;left:0;bottom:0;width:200px;overflow-y:scroll;z-index:100;font-size:90%;background-color:#FAFAFA}
+.thumbnails>div{padding:5px}
 .breadcrumbs>span.selected a{background-color:#CCC}
 .breadcrumbs>span:after{content:"→"}
 .breadcrumbs>span:last-child:after{content:""}
