--- a/static/site.css
+++ b/static/site.css
@@ -9,16 +9,16 @@ h1,h2,h3,h4,h5,h6{margin:1ex 0}
 a{cursor:pointer;text-decoration:underline}
 .thumbnails{position:fixed;top:29px;left:0;bottom:0;width:200px;overflow-y:scroll;z-index:100;font-size:90%;background-color:#FAFAFA}
 .thumbnails>div{padding:5px}
-.breadcrumbs>span.selected a{background-color:#CCC}
-.breadcrumbs>span:after{content:"→"}
-.breadcrumbs>span:last-child:after{content:""}
 div,input,main,nav,section,span,textarea{box-sizing:border-box}
 .array,.name,.number,.object,.reference,.string{vertical-align:top}
-.object{padding-left:5px}
-.name,.number,.reference,.string{display:inline-block;margin:.2ex .1em;padding:.3ex .2em .1ex .2em}
+.object{margin:.2ex .1em}
+.name,.number,.reference,.string{display:inline-block;margin:.2ex .1em;padding:.3ex .2em 0 .2em}
 .name{font-weight:700}
-.reference{border:1px solid #88F}
-.number{border:1px solid #E81}
+.reference{outline:1px solid #88F}
+.number{outline:1px solid #E81}
 .string{font-family:monospace;white-space:pre-wrap;word-break:break-all}
-.page{border:2px solid rgba(100,50,200,.9);position:relative}
-.page div{border:1px solid rgba(200,100,100,.5);position:absolute;white-space:pre}
+.page{position:relative}
+.span{position:absolute;white-space:pre}
+.outline .page{outline:1px solid rgba(100,50,200,.9)}
+.outline .span{outline:1px solid rgba(200,100,100,.5)}
+.outline .span:before{content:"";position:absolute;width:2px;height:2px;background-color:rgba(100,25,25,.8)}
