Add scale slider to page viewer

--- a/static/site.less
+++ b/static/site.less
@@ -108,6 +108,7 @@ div, section, nav, main, textarea, input, span {
 
 .page {
   position: relative;
+  transform-origin: 0% 0%;
 }
 .span {
   position: absolute;
