--- a/static/site.css
+++ b/static/site.css
@@ -17,7 +17,7 @@ div,input,main,nav,section,span,textarea{box-sizing:border-box}
 .reference{outline:1px solid #88F}
 .number{outline:1px solid #E81}
 .string{font-family:monospace;white-space:pre-wrap;word-break:break-all}
-.page{position:relative}
+.page{position:relative;transform-origin:0 0}
 .span{position:absolute;white-space:pre}
 .outline .page{outline:1px solid rgba(100,50,200,.9)}
 .outline .span{outline:1px solid rgba(200,100,100,.5)}
