--- a/static/site.css
+++ b/static/site.css
@@ -2,8 +2,8 @@ body{margin:0}
 table{border-spacing:0;border-collapse:collapse}
 table td,table th{font-size:100%;text-align:left}
 body{background-color:#FDFDFD}
-.flash{position:fixed;left:0;right:0;text-align:center;pointer-events:none;z-index:1000}
-.flash span{display:inline-block;background-color:rgba(0,0,0,.66);color:#fff;padding:2px 8px;margin:3px 6px;border-radius:3px}
+.flash{position:fixed;left:0;right:0;text-align:center;pointer-events:none;z-index:10000}
+.flash span{display:inline-block;background-color:rgba(0,0,0,.75);color:#fff;padding:5px 8px;margin:3px 6px;border-radius:3px;white-space:pre-wrap;text-align:left}
 nav{top:0;left:0;right:0;z-index:1000;background-color:#DDD;border-bottom:1px solid #BBB;padding:5px;box-sizing:border-box}
 h1,h2,h3,h4,h5,h6{margin:1ex 0}
 a{cursor:pointer;text-decoration:underline}
@@ -17,8 +17,11 @@ div,input,main,nav,section,span,textarea{box-sizing:border-box}
 .reference{outline:1px solid #88F}
 .number{outline:1px solid #E81}
 .string{font-family:monospace;white-space:pre-wrap;word-break:break-all}
-.page{position:relative;transform-origin:0 0}
-.span{position:absolute;white-space:pre}
-.outline .page{outline:1px solid rgba(100,50,200,.9)}
-.outline .span{outline:1px solid rgba(200,100,100,.5)}
-.outline .span:before{content:"";position:absolute;width:2px;height:2px;background-color:rgba(100,25,25,.8)}
+.page{position:relative}
+.page div{position:absolute}
+.page .text{white-space:pre}
+.outline .MediaBox{outline:1px solid rgba(100,50,50,.9)}
+.outline .bounds{outline:1px solid rgba(25,150,10,.9)}
+.outline .header{outline:1px solid rgba(125,10,150,.9)}
+.outline .footer{outline:1px solid rgba(50,200,200,.9)}
+.outline .text{outline:1px solid rgba(200,100,100,.5)}
