--- a/static/site.less
+++ b/static/site.less
@@ -23,15 +23,17 @@ body {
   text-align: center;
   pointer-events: none; // allows click through to elements underneath
 
-  z-index: 1000;
+  z-index: 10000;
 
   span {
     display: inline-block;
-    background-color: rgba(0, 0, 0, 66%);
+    background-color: rgba(0, 0, 0, 75%);
     color: white;
-    padding: 2px 8px;
+    padding: 5px 8px;
     margin: 3px 6px;
     border-radius: 3px;
+    white-space: pre-wrap;
+    text-align: left;
   }
 }
 
@@ -108,24 +110,27 @@ div, section, nav, main, textarea, input, span {
 
 .page {
   position: relative;
-  transform-origin: 0% 0%;
-}
-.span {
-  position: absolute;
-  white-space: pre;
+  div {
+    position: absolute;
+  }
+  .text {
+    white-space: pre;
+  }
 }
 .outline {
-  .page {
-    outline: 1px solid rgba(100, 50, 200, 0.9);
+  .MediaBox {
+    outline: 1px solid rgba(100, 50, 50, 0.9); // brown
   }
-  .span {
+  .bounds {
+    outline: 1px solid rgba(25, 150, 10, 0.9); // green
+  }
+  .header {
+    outline: 1px solid rgba(125, 10, 150, 0.9); // purple
+  }
+  .footer {
+    outline: 1px solid rgba(50, 200, 200, 0.9); // cyan
+  }
+  .text {
     outline: 1px solid rgba(200, 100, 100, 0.5);
-    &:before {
-      content: "";
-      position: absolute;
-      width: 2px;
-      height: 2px;
-      background-color: rgba(100, 25, 25, 0.8);
-    }
   }
 }
