--- a/static/site.css
+++ b/static/site.css
@@ -3,7 +3,7 @@ table{border-spacing:0;border-collapse:collapse}
 table td,table th{font-size:100%;text-align:left}
 body{background-color:#FDFDFD}
 .flash{position:fixed;left:0;right:0;text-align:center;pointer-events:none;z-index:10000}
-.flash span{display:inline-block;background-color:rgba(0,0,0,.75);color:#fff;padding:5px 8px;margin:3px 6px;border-radius:3px;white-space:pre-wrap;text-align:left}
+.flash span{display:inline-block;background-color:rgba(0,0,0,.75);color:#fff;padding:5px 8px;margin:3px 6px;border-radius:3px;white-space:pre-wrap;text-align:left;pointer-events:auto}
 nav{top:0;left:0;right:0;z-index:1000;background-color:#DDD;border-bottom:1px solid #BBB;padding:5px;box-sizing:border-box}
 h1,h2,h3,h4,h5,h6{margin:1ex 0}
 a{cursor:pointer;text-decoration:underline}
@@ -17,11 +17,16 @@ div,input,main,nav,section,span,textarea{box-sizing:border-box}
 .reference{outline:1px solid #88F}
 .number{outline:1px solid #E81}
 .string{font-family:monospace;white-space:pre-wrap;word-break:break-all}
-.page{position:relative}
+.page{position:absolute}
 .page div{position:absolute}
 .page .text{white-space:pre}
-.outline .MediaBox{outline:1px solid rgba(100,50,50,.9)}
-.outline .bounds{outline:1px solid rgba(25,150,10,.9)}
+.outline .page{outline:1px solid rgba(100,50,50,.9)}
 .outline .header{outline:1px solid rgba(125,10,150,.9)}
 .outline .footer{outline:1px solid rgba(50,200,200,.9)}
+.outline .col1,.outline .col2{outline:1px solid rgba(50,200,200,.9)}
+.outline .outside{outline:1px solid rgba(25,150,10,.9)}
 .outline .text{outline:1px solid rgba(200,100,100,.5)}
+.outline .section .paragraph{outline:1px solid rgba(100,20,20,.5)}
+.outline .section .line{outline:1px solid rgba(200,100,100,.5)}
+.section .paragraph{margin:2ex 0}
+.section .line{font-family:monospace;white-space:pre-wrap;word-break:break-all}
