--- a/site.less
+++ b/site.less
@@ -167,3 +167,15 @@ div, section, nav, main, textarea, input, span {
     word-break: break-all;
   }
 }
+
+.keyval-row {
+  border-top: 1px solid #AAA;
+  span {
+    display: inline-block;
+    padding: 0 5px;
+    &:first-child {
+      font-weight: bold;
+      width: 50px;
+    }
+  }
+}
