--- a/templates/objects/font.html
+++ b/templates/objects/font.html
@@ -1,8 +1,8 @@
-<h3>Mapping</h3>
-<p>characterByteLength: {{Mapping.characterByteLength}}</p>
-<p>highest index: {{Mapping.mapping.length}}</p>
+<h3>Encoding</h3>
+<p>characterByteLength: {{encoding.characterByteLength}}</p>
+<p>highest index: {{encoding.mapping.length}}</p>
 
-<div ng-repeat="(key, val) in Mapping.mapping track by $index" ng-show="val != null" class="keyval-row">
+<div ng-repeat="(key, val) in encoding.mapping track by $index" ng-show="val != null" class="key-row">
   <span style="text-align: right">{{key}}</span>
   <span>{{val || 'null'}}</span>
 </div>
