--- a/templates/contents.html
+++ b/templates/contents.html
@@ -1,5 +1,7 @@
-<h3>Page {{pageNumber}}</h3>
-<h4>Contents</h4>
-<div ng-if="file && page">
-  <component name="PDFObject" file="file" model="page"></component>
-</div>
+<section class="hpad">
+  <h3>Page {{pageNumber}}</h3>
+  <h4>Contents</h4>
+  <div ng-if="file && page">
+    <component name="PDFObject" file="file" model="page"></component>
+  </div>
+</section>
