--- a/templates/document.html
+++ b/templates/document.html
@@ -1,6 +1,8 @@
-<h2>Document Sections</h2>
-<div ng-repeat="section in document.sections" class="section" style="border-top: 1px solid gray">
-  <h3><i>Section {{$index}}</i></h3>
-  <h4>{{section.header}}</h4>
-  <p ng-repeat="paragraph in section.content track by $index">{{paragraph}}</p>
-</div>
+<section class="hpad">
+  <h2>Document</h2>
+  <div ng-repeat="section in paper.sections" class="hpad section" style="border-top: 1px solid gray">
+    <h3><i>Section {{$index}}</i></h3>
+    <h4>{{section.title}}</h4>
+    <p ng-repeat="paragraph in section.paragraphs track by $index">{{paragraph}}</p>
+  </div>
+</section>
