--- a/templates/object.html
+++ b/templates/object.html
@@ -1,7 +1,10 @@
-<a ui-sref="pdf.object.content_stream">As content stream</a>
-<a ui-sref="pdf.object.font">As font</a>
+<section class="hpad">
+  <a ui-sref="pdf.object.content_stream">As content stream</a>
+  <a ui-sref="pdf.object.font">As font</a>
+  <a ui-sref="pdf.object.graphics">As graphics</a>
 
-<h3>Object {{object_number}}:0</h3>
-<div ng-if="file && object">
-  <component name="PDFObject" file="file" model="object"></component>
-</div>
+  <h3>Object {{object_number}}:0</h3>
+  <div ng-if="file && object">
+    <component name="PDFObject" file="file" model="object"></component>
+  </div>
+</section>
