--- a/templates/objects/font.html
+++ b/templates/objects/font.html
@@ -1,8 +1,10 @@
-<h3>Encoding</h3>
-<p>characterByteLength: {{encoding.characterByteLength}}</p>
-<p>highest index: {{encoding.mapping.length}}</p>
+<section class="hpad">
+  <h3>Encoding</h3>
+  <p>characterByteLength: {{encoding.characterByteLength}}</p>
+  <p>highest index: {{encoding.mapping.length}}</p>
 
-<div ng-repeat="(key, val) in encoding.mapping track by $index" ng-show="val != null" class="key-row">
-  <span style="text-align: right">{{key}}</span>
-  <span>{{val || 'null'}}</span>
-</div>
+  <div ng-repeat="(key, val) in encoding.mapping track by $index" ng-show="val != null" class="key-row">
+    <span style="text-align: right">{{key}}</span>
+    <span>{{val || 'null'}}</span>
+  </div>
+</section>
