Separate content stream and text canvas; update app.ts and models.ts to reflect latest API

--- a/templates/document.html
+++ b/templates/document.html
@@ -1,5 +1,8 @@
 <section class="hpad">
   <h2>Document</h2>
+  <ul>
+    <li>fontSize_quartiles: {{fontSize_quartiles}}</li>
+  </ul>
   <div ng-repeat="section in paper.sections" class="hpad section" style="border-top: 1px solid gray">
     <h3><i>Section {{$index}}</i></h3>
     <h4>{{section.title}}</h4>
