--- a/templates/object.html
+++ b/templates/object.html
@@ -1,5 +1,6 @@
 <section class="hpad">
   <a ui-sref="pdf.object.content_stream">As content stream</a>
+  <a ui-sref="pdf.object.text_canvas">As text canvas</a>
   <a ui-sref="pdf.object.font">As font</a>
   <a ui-sref="pdf.object.graphics">As graphics</a>
 
