--- a/site.less
+++ b/site.less
@@ -65,40 +65,35 @@ body {
   }
 }
 
-nav {
-  position: fixed;
+nav.selector {
+  padding: 5px;
 
-  &[fixedflow] {
-    top: 0;
-    left: 0;
-    right: 0;
+  background-color: #DDD;
+  border-bottom: 1px solid #BBB;
+}
 
-    z-index: 1000;
+main {
+  display: flex;
 
-    background-color: #DDD;
-    border-bottom: 1px solid #BBB;
-
-    padding: 5px;
+  nav {
+    flex-basis: 240px;
   }
+  section {
+    flex-grow: 1;
+    // this flex-basis is required and sets the minimum width
+    flex-basis: 480px;
+  }
+}
 
-  &.thumbnails {
-    top: 29px;
-    left: 0;
-    bottom: 0;
+.thumbnails {
+  padding: 0 5px;
 
-    z-index: 100;
+  background-color: #FAFAFA;
+  overflow-y: scroll;
+  font-size: 90%;
 
-    background-color: #FAFAFA;
-    overflow-y: scroll;
-    font-size: 90%;
-
-    .page {
-      border-top: 1px solid #B86;
-      font-size: 90%;
-    }
-    .selected {
-      background-color: #DDD;
-    }
+  .selected {
+    background-color: #DDD;
   }
 }
 
@@ -131,13 +126,11 @@ nav {
   word-break: break-all;
 }
 
-.transform-root {
-  transform-origin: 0% 0%;
-  // we need `display: inline-block` to avoid transform requiring too much width
+.layout {
   display: inline-block;
+  margin: 5px 7px;
 }
-
-.canvas-container {
+.graphics {
   position: absolute;
   div {
     position: absolute;
@@ -146,32 +139,28 @@ nav {
     white-space: pre;
   }
   .label {
-    display: none;
+    visibility: hidden;
   }
-  &.outline {
-    .graphics {
-      outline: 1px solid rgba(100, 50, 50, 0.9); // brown
-    }
-    // each text span
-    .text {
-      outline: 1px solid rgba(200, 100, 100, 0.5); // pink
-    }
-    // generic box
-    .box {
-      outline: 2px solid rgba(0, 0, 0, 0.75); // gray
-    }
-    .label {
-      display: inline-block;
-    }
-
-    .section {
-      .paragraph {
-        outline: 1px solid rgba(100, 20, 20, 0.5);
-      }
-      .line {
-        outline: 1px solid rgba(200, 100, 100, 0.5);
-      }
-    }
+}
+.draw-outlines {
+  .graphics {
+    outline: 1px solid rgba(100, 50, 50, 0.9); // brown
+  }
+  // each text span
+  .text {
+    outline: 1px solid rgba(200, 100, 100, 0.4); // pink
+  }
+  // generic box
+  .box {
+    outline: 2px solid rgba(0, 0, 0, 0.5); // gray
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+}
+.draw-labels {
+  .label {
+    visibility: visible;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: white;
   }
 }
 
@@ -188,6 +177,19 @@ nav {
   }
   & > :last-child:after {
     content: '';
+  }
+}
+[authors] > span {
+  outline: 1px solid gray;
+  padding: 0 2px;
+  [title="first"] {
+    color: red;
+  }
+  [title="middle"] {
+    color: pink;
+  }
+  [title="last"] {
+    color: darkred;
   }
 }
 
@@ -242,4 +244,8 @@ table {
       background-color: #FEFEFE;
     }
   }
+}
+
+.right {
+  text-align: right;
 }
