--- a/site.less
+++ b/site.less
@@ -11,7 +11,6 @@ table {
   }
 }
 // ----------------------
-
 // --- generic compact ---
 h1, h2, h3, h4, h5, h6 {
   margin: 1ex 0;
@@ -38,62 +37,115 @@ a {
   text-decoration: underline;
 }
 // -----------------------
+// --- generic tables ----
+table {
+  td {
+    vertical-align: top;
+  }
+  &.fill {
+    width: 100%;
+  }
+  &.padded tr {
+    td, th {
+      &:first-child { padding-left: 10px; }
+      &:last-child { padding-right: 10px; }
+    }
+  }
+  &.lined tbody {
+    td {
+      border-top: 1px solid #EEE;
+    }
+  }
+  &.striped tbody {
+    tr:nth-child(odd) {
+      background-color: #FCFCFC;
+    }
+    tr:nth-child(even) {
+      background-color: #FEFEFE;
+    }
+  }
+}
+// -----------------------
 
 body {
   background-color: #FDFDFD;
 }
-
-.flash {
-  position: fixed;
-  left: 0;
-  right: 0;
+.left {
+  text-align: left;
+}
+.center {
   text-align: center;
-  pointer-events: none; // "none" allows click through to elements underneath
+}
+.right {
+  text-align: right;
+}
 
-  z-index: 10000;
+// .flash {
+//   position: fixed;
+//   left: 0;
+//   right: 0;
+//   text-align: center;
+//   pointer-events: none; // "none" allows click through to elements underneath
+//   z-index: 10000;
+//   span {
+//     display: inline-block;
+//     background-color: rgba(0, 0, 0, 75%);
+//     color: white;
+//     padding: 5px 8px;
+//     margin: 3px 6px;
+//     border-radius: 3px;
+//     white-space: pre-wrap;
+//     text-align: left;
+//     pointer-events: auto; // allow selecting the text of the flash message
+//   }
+// }
 
-  span {
-    display: inline-block;
-    background-color: rgba(0, 0, 0, 75%);
-    color: white;
-    padding: 5px 8px;
-    margin: 3px 6px;
-    border-radius: 3px;
-    white-space: pre-wrap;
-    text-align: left;
-    pointer-events: auto; // allow selecting the text of the flash message
+header {
+  & > nav {
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    padding: 2px;
+    background: linear-gradient(to bottom, #EEE, #CCC);
+    border-bottom: 1px solid #AAA;
+    font-size: 80%;
+    & > span {
+      margin: 0 20px 0 2px;
+    }
+  }
+  &:after {
+    display: block;
+    padding: 2px;
+    content: '\a0'; // U+00A0 NO-BREAK SPACE
+    line-height: 18px;
+    border-bottom: 1px solid transparent;
   }
 }
 
-nav.selector {
-  padding: 5px;
+.pdf-container {
+  nav.thumbnails {
+    // the thumbnails panel must be fixed that that it can scroll independent of the content to the right
+    position: fixed;
+    top: 23px; // should equal the height of header > nav; there's not really a better way to do this
+    bottom: 0;
+    width: 240px;
+    padding: 0 5px;
 
-  background-color: #DDD;
-  border-bottom: 1px solid #BBB;
-}
+    background-color: #FAFAFA;
+    height: auto;
+    overflow-y: scroll;
+    font-size: 90%;
 
-main {
-  display: flex;
-
-  nav {
-    flex-basis: 240px;
+    .selected {
+      background-color: #DDD;
+    }
+    .page {
+      border-top: 1px solid #B86;
+    }
   }
-  section {
-    flex-grow: 1;
-    // this flex-basis is required and sets the minimum width
-    flex-basis: 480px;
-  }
-}
-
-.thumbnails {
-  padding: 0 5px;
-
-  background-color: #FAFAFA;
-  overflow-y: scroll;
-  font-size: 90%;
-
-  .selected {
-    background-color: #DDD;
+  article {
+    margin-left: 240px;
   }
 }
 
@@ -118,50 +170,34 @@ main {
 }
 .number {
   font-family: monospace;
-  // outline: 1px solid #E81;
 }
 .string {
-  // font-family: monospace;
   white-space: pre-wrap;
   word-break: break-all;
 }
 
+.layout-container {
+  position: relative;
+}
 .layout {
-  display: inline-block;
-  margin: 5px 7px;
-}
-.graphics {
   position: absolute;
-  div {
-    position: absolute;
-  }
-  .text {
-    white-space: pre;
-  }
-  .label {
-    visibility: hidden;
-  }
+  outline: 1px solid rgba(100, 50, 50, 0.9); // brown
 }
-.draw-outlines {
-  .graphics {
-    outline: 1px solid rgba(100, 50, 50, 0.9); // brown
-  }
-  // each text span
-  .text {
-    outline: 1px solid rgba(200, 100, 100, 0.4); // pink
-  }
-  // generic box
-  .box {
-    outline: 2px solid rgba(0, 0, 0, 0.5); // gray
-    background-color: rgba(0, 0, 0, 0.1);
-  }
+// each text span
+.textSpan {
+  position: absolute;
+  white-space: pre;
+  outline: 1px solid rgba(200, 100, 100, 0.4); // pink
 }
-.draw-labels {
-  .label {
-    visibility: visible;
-    background-color: rgba(0, 0, 0, 0.75);
-    color: white;
-  }
+.box {
+  position: absolute;
+  outline: 2px solid rgba(0, 0, 0, 0.5); // gray
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.label {
+  // visibility: visible;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: white;
 }
 
 .paper-body {
@@ -194,6 +230,7 @@ main {
 }
 
 .section {
+  border-top: 1px solid gray;
   .paragraph {
     margin: 1ex 0;
     text-indent: 2em;
@@ -215,37 +252,4 @@ main {
       width: 50px;
     }
   }
-}
-
-table {
-  td {
-    vertical-align: top;
-  }
-
-  &.fill {
-    width: 100%;
-  }
-  &.padded tr {
-    td, th {
-      &:first-child { padding-left: 10px; }
-      &:last-child { padding-right: 10px; }
-    }
-  }
-  &.lined tbody {
-    td {
-      border-top: 1px solid #EEE;
-    }
-  }
-  &.striped tbody {
-    tr:nth-child(odd) {
-      background-color: #FCFCFC;
-    }
-    tr:nth-child(even) {
-      background-color: #FEFEFE;
-    }
-  }
-}
-
-.right {
-  text-align: right;
 }
