Move some of components/ into views/; TypeScriptify some of the non-JSX stuff

--- a/site.less
+++ b/site.less
@@ -180,7 +180,6 @@ header {
 .layout {
   margin: 10px;
 }
-// each text span
 .textSpan {
   white-space: pre;
 }
@@ -188,6 +187,14 @@ header {
   visibility: hidden;
   background-color: rgba(0, 0, 0, 0.75);
   color: white;
+}
+.hlinks {
+  span {
+    margin: 2px;
+    padding: 2px;
+    text-decoration: underline;
+    cursor: pointer;
+  }
 }
 
 // global viewConfig flags
