Replace booleans with green checks/red x's; remove duplicated types from graphics module; clean up an import using commonjs-style require()

--- a/site.less
+++ b/site.less
@@ -176,6 +176,14 @@ header {
   white-space: pre-wrap;
   word-break: break-all;
 }
+.boolean {
+  &[title="true"] {
+    color: green;
+  }
+  &[title="false"] {
+    color: darkred;
+  }
+}
 
 .layout {
   margin: 10px;
